--- a/assets/css/atum-dashboard.css
+++ b/assets/css/atum-dashboard.css
@@ -503,8 +503,8 @@
   --dash-add-widget-color-dark: #00B8DB;
   --dash-atum-version: rgba(0, 0, 0, 0.1);
   --dash-blue-trans: rgba(0, 183, 219, 0.79);
-  --dash-card-bg: #fff;
-  --dash-card-text: #adb5bd;
+  --dash-card-bg: #f8f9fa;
+  --dash-card-text: #6c757d;
   --dash-green-blue: rgba(30, 200, 149, 0.79);
   --dash-green-light: #d5f5ba;
   --dash-green-trans: rgba(106, 200, 30, 0.79);
@@ -2753,6 +2753,203 @@ input.form-check-input[disabled] ~ .form-check-label, input.form-check-input:dis
   vertical-align: -3px;
 }
 
+.dash-card {
+  margin: 15px 7.5px;
+  width: 33.3333%;
+  border: 1px solid var(--gray-400);
+  border-radius: 5px;
+  background: var(--dash-card-bg) center 1px no-repeat;
+  background-position: bottom;
+  background-size: contain;
+  position: relative;
+  overflow: hidden;
+}
+.dash-card:first-child {
+  margin-left: 30px;
+}
+.dash-card:last-child {
+  margin-right: 30px;
+}
+@media all and (max-width: 768px) {
+  .dash-card {
+    margin-top: 15px;
+    margin-bottom: 15px;
+  }
+}
+@media all and (max-width: 480px) {
+  .dash-card {
+    width: 100%;
+    margin-left: 0 !important;
+    margin-right: 0 !important;
+  }
+}
+.dash-card .card-content {
+  width: 60%;
+  float: left;
+  text-align: left;
+  padding: 15px;
+  position: relative;
+  z-index: 1;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  height: calc(100% - 30px);
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+.dash-card .card-content h5, .dash-card .card-content h2 {
+  margin: 5px 0;
+  color: var(--main-title) !important;
+}
+.dash-card .card-content h5.h5-primary, .dash-card .card-content h2.h5-primary {
+  color: var(--primary);
+}
+.dash-card .card-content h5.h5-secondary, .dash-card .card-content h2.h5-secondary {
+  color: var(--tertiary);
+}
+.dash-card .card-content h5.h5-tertiary, .dash-card .card-content h2.h5-tertiary {
+  color: var(--secondary);
+}
+.dash-card .card-content h2, .dash-card .card-content p {
+  color: var(--dash-card-text);
+  font-weight: 200;
+}
+.dash-card .card-content h5 {
+  font-size: 13px;
+  font-weight: bold;
+  margin: 0;
+}
+.dash-card .card-content h2 {
+  font-size: 21px;
+  line-height: 1.1;
+  margin-top: 0;
+}
+.dash-card .card-content p {
+  font-size: 10px;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+}
+.dash-card .card-content .btn {
+  margin-top: 15px;
+  display: inline-block;
+  padding: 4px 10px;
+  font-size: 10px;
+  text-transform: uppercase;
+}
+@media all and (max-width: 768px) {
+  .dash-card .card-content {
+    width: 91%;
+  }
+}
+.dash-card .card-img {
+  width: 30%;
+}
+.dash-card .card-img img {
+  position: absolute;
+}
+@media all and (max-width: 768px) {
+  .dash-card .card-img {
+    display: none;
+  }
+}
+.dash-card.docs {
+  background-image: url("../images/dashboard/card-docs-bg.png");
+}
+.dash-card.docs .card-img img {
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  right: 0;
+  max-width: 280px;
+}
+.dash-card.add-ons {
+  background-image: url("../images/dashboard/card-add-ons-bg.png");
+}
+.dash-card.add-ons .card-img img {
+  max-width: 120px;
+  bottom: 0;
+  right: 10px;
+}
+.dash-card.support {
+  background-image: url("../images/dashboard/card-subscription-bg.png");
+}
+.dash-card.support .card-img img {
+  max-width: 120px;
+  bottom: 0;
+  right: 10px;
+}
+.dash-card.subscription {
+  background-image: url("../images/dashboard/card-subscription-bg.png");
+}
+.dash-card.subscription .card-img img {
+  max-width: 80px;
+  top: 30px;
+  right: 30px;
+}
+.dash-card.subscription .card-content {
+  padding-bottom: 5px;
+}
+.dash-card.subscription form {
+  clear: both;
+  width: 90%;
+  margin: auto;
+}
+.dash-card.subscription form .input-group {
+  background-color: var(--dash-input-group-bg);
+  border-radius: 5px;
+  -webkit-box-shadow: 0 0 0 3px var(--dash-input-group-shadow);
+          box-shadow: 0 0 0 3px var(--dash-input-group-shadow);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.dash-card.subscription form input[type=email] {
+  border: none;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  background: var(--dash-subscription-input);
+  padding: 7px 15px;
+  font-size: 10px;
+  font-weight: 300;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  color: var(--atum-text-color-var1);
+}
+.dash-card.subscription form input[type=email]::-moz-placeholder {
+  color: var(----main-text);
+  opacity: 1;
+}
+.dash-card.subscription form input[type=email]:-ms-input-placeholder {
+  color: var(----main-text);
+}
+.dash-card.subscription form input[type=email]::-webkit-input-placeholder {
+  color: var(----main-text);
+}
+@media all and (max-width: 768px) {
+  .dash-card.subscription form input[type=email] {
+    padding: 6px 10px;
+  }
+}
+.dash-card.subscription form button {
+  font-size: 10px;
+}
+@media all and (max-width: 480px) {
+  .dash-card.subscription form {
+    margin-bottom: 15px;
+  }
+}
+
 :root .grid-stack-item > .ui-resizable-handle {
   -webkit-filter: none;
           filter: none;
@@ -4544,94 +4741,6 @@ body.toplevel_page_atum-dashboard #wpbody-content > .notice-error, body.toplevel
     display: flex;
   }
 }
-.atum-dashboard .dash-cards .dash-card {
-  margin: 30px 7.5px;
-  width: 33.3333%;
-  border: 1px solid var(--gray-400);
-  border-radius: 5px;
-  background: var(--dash-card-bg) center 1px no-repeat;
-  background-position: bottom;
-  background-size: contain;
-  position: relative;
-  overflow: hidden;
-}
-.atum-dashboard .dash-cards .dash-card:first-child {
-  margin-left: 30px;
-}
-.atum-dashboard .dash-cards .dash-card:last-child {
-  margin-right: 30px;
-}
-@media all and (max-width: 768px) {
-  .atum-dashboard .dash-cards .dash-card {
-    margin-top: 15px;
-    margin-bottom: 15px;
-  }
-}
-@media all and (max-width: 480px) {
-  .atum-dashboard .dash-cards .dash-card {
-    width: 100%;
-    margin-left: 0 !important;
-    margin-right: 0 !important;
-  }
-}
-.atum-dashboard .dash-cards .dash-card .card-content {
-  width: 60%;
-  float: left;
-  text-align: left;
-  padding: 15px;
-  position: relative;
-  z-index: 1;
-}
-.atum-dashboard .dash-cards .dash-card .card-content h5, .atum-dashboard .dash-cards .dash-card .card-content h2 {
-  margin: 5px 0;
-  color: var(--main-title) !important;
-}
-.atum-dashboard .dash-cards .dash-card .card-content h5.h5-primary, .atum-dashboard .dash-cards .dash-card .card-content h2.h5-primary {
-  color: var(--primary);
-}
-.atum-dashboard .dash-cards .dash-card .card-content h5.h5-secondary, .atum-dashboard .dash-cards .dash-card .card-content h2.h5-secondary {
-  color: var(--tertiary);
-}
-.atum-dashboard .dash-cards .dash-card .card-content h5.h5-tertiary, .atum-dashboard .dash-cards .dash-card .card-content h2.h5-tertiary {
-  color: var(--secondary);
-}
-.atum-dashboard .dash-cards .dash-card .card-content h2, .atum-dashboard .dash-cards .dash-card .card-content p {
-  color: var(--dash-card-text);
-  font-weight: 200;
-}
-.atum-dashboard .dash-cards .dash-card .card-content h5 {
-  font-size: 13px;
-  font-weight: bold;
-}
-.atum-dashboard .dash-cards .dash-card .card-content h2 {
-  font-size: 21px;
-}
-.atum-dashboard .dash-cards .dash-card .card-content p {
-  font-size: 10px;
-}
-.atum-dashboard .dash-cards .dash-card .card-content .btn {
-  margin-top: 15px;
-  display: inline-block;
-  padding: 4px 10px;
-  font-size: 10px;
-}
-@media all and (max-width: 768px) {
-  .atum-dashboard .dash-cards .dash-card .card-content {
-    width: 91%;
-  }
-}
-.atum-dashboard .dash-cards .dash-card .card-img {
-  float: left;
-  width: 30%;
-}
-.atum-dashboard .dash-cards .dash-card .card-img img {
-  position: absolute;
-}
-@media all and (max-width: 768px) {
-  .atum-dashboard .dash-cards .dash-card .card-img {
-    display: none;
-  }
-}
 .atum-dashboard .dash-cards .dash-card.dash-marketing-banner {
   width: 100%;
   min-height: 200px;
@@ -4775,90 +4884,6 @@ body.toplevel_page_atum-dashboard #wpbody-content > .notice-error, body.toplevel
 .atum-dashboard .dash-cards .dash-card.dash-marketing-banner .mp-logo {
   width: 215px;
   height: auto;
-}
-.atum-dashboard .dash-cards .dash-card.docs {
-  background-image: url("../images/dashboard/card-docs-bg.png");
-}
-.atum-dashboard .dash-cards .dash-card.docs .card-img img {
-  position: absolute;
-  top: 50%;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
-  right: 0;
-  max-width: 280px;
-}
-.atum-dashboard .dash-cards .dash-card.add-ons {
-  background-image: url("../images/dashboard/card-add-ons-bg.png");
-}
-.atum-dashboard .dash-cards .dash-card.add-ons .card-img img {
-  max-width: 120px;
-  bottom: 0;
-  right: 10px;
-}
-.atum-dashboard .dash-cards .dash-card.subscription {
-  background-image: url("../images/dashboard/card-subscription-bg.png");
-}
-.atum-dashboard .dash-cards .dash-card.subscription .card-img img {
-  max-width: 80px;
-  top: 30px;
-  right: 30px;
-}
-.atum-dashboard .dash-cards .dash-card.subscription .card-content {
-  padding-bottom: 5px;
-}
-.atum-dashboard .dash-cards .dash-card.subscription form {
-  clear: both;
-  width: 90%;
-  margin: auto;
-}
-.atum-dashboard .dash-cards .dash-card.subscription form .input-group {
-  background-color: var(--dash-input-group-bg);
-  border-radius: 5px;
-  -webkit-box-shadow: 0 0 0 3px var(--dash-input-group-shadow);
-          box-shadow: 0 0 0 3px var(--dash-input-group-shadow);
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-.atum-dashboard .dash-cards .dash-card.subscription form input[type=email] {
-  border: none;
-  -webkit-box-shadow: none;
-          box-shadow: none;
-  background: var(--dash-subscription-input);
-  padding: 7px 15px;
-  font-size: 10px;
-  font-weight: 300;
-  border-top-right-radius: 0;
-  border-bottom-right-radius: 0;
-  border-top-left-radius: 5px;
-  border-bottom-left-radius: 5px;
-  -webkit-box-flex: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1;
-  color: var(--atum-text-color-var1);
-}
-.atum-dashboard .dash-cards .dash-card.subscription form input[type=email]::-moz-placeholder {
-  color: var(----main-text);
-  opacity: 1;
-}
-.atum-dashboard .dash-cards .dash-card.subscription form input[type=email]:-ms-input-placeholder {
-  color: var(----main-text);
-}
-.atum-dashboard .dash-cards .dash-card.subscription form input[type=email]::-webkit-input-placeholder {
-  color: var(----main-text);
-}
-@media all and (max-width: 768px) {
-  .atum-dashboard .dash-cards .dash-card.subscription form input[type=email] {
-    padding: 6px 10px;
-  }
-}
-.atum-dashboard .dash-cards .dash-card.subscription form button {
-  font-size: 10px;
-}
-@media all and (max-width: 480px) {
-  .atum-dashboard .dash-cards .dash-card.subscription form {
-    margin-bottom: 15px;
-  }
 }
 .atum-dashboard .add-dash-widget {
   border: 1px dashed var(--dash-add-widget-color);
