--- a/assets/scss/atum-dashboard.scss
+++ b/assets/scss/atum-dashboard.scss
@@ -15,6 +15,7 @@
 @import "atoms/nice-select";
 @import "atoms/tooltip";
 @import "atoms/form-check";
+@import "atoms/dash-cards";
 
 @import "molecules/gridstack";
 @import "molecules/sweet-alert";
