--- a/assets/scss/atum-addons.scss
+++ b/assets/scss/atum-addons.scss
@@ -11,6 +11,7 @@
 @import "atoms/buttons";
 @import "atoms/atum-icons";
 @import "atoms/tooltip";
+@import "atoms/dash-cards";
 
 @import "molecules/alert";
 @import "molecules/block-ui";
