--- a/assets/scss/common/_root.scss
+++ b/assets/scss/common/_root.scss
@@ -91,8 +91,8 @@
 	--dash-add-widget-color-dark: #{$blue};
 	--dash-atum-version: #{transparentize($black, 0.9)};
 	--dash-blue-trans: #{$blue-trans};
-	--dash-card-bg: #{$white};
-	--dash-card-text: #{$gray-500};
+	--dash-card-bg: #{$gray-100};
+	--dash-card-text: #{$gray-600};
 	--dash-green-blue: #{$green-blue};
 	--dash-green-light: #{$green-light};
 	--dash-green-trans: #{$green-trans};
